--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "redux-project-02",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://reduxtoolkit-todo-app.netlify.app/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.16.5",
@@ -10,6 +11,7 @@
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
     "react-redux": "^8.0.4",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
